<resources>
    <string name="app_name">LayoutTutorial</string>
    <string name="linearlayout">线性布局演示</string>
    <string name="relativelayout">相对布局演示</string>
    <string name="tablelayout">表格布局演示</string>
    <string name="text1">点击获取布局</string>
    <string name="one_one">One,One</string>
    <string name="one_two">One,Two</string>
    <string name="one_three">One,Three</string>
    <string name="two_one">Two,One</string>
</resources>
