<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        style="@android:style/Widget.Button"
        android:layout_width="260dp"
        android:layout_height="70dp"
        android:text="@string/linearlayout"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="71dp" />

    <Button
        android:id="@+id/button2"
        style="@android:style/Widget.Button"
        android:layout_width="260dp"
        android:layout_height="70dp"
        android:text="@string/relativelayout"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="160dp" />

    <Button
        android:id="@+id/button3"
        style="@android:style/Widget.Button"
        android:layout_width="260dp"
        android:layout_height="70dp"
        android:text="@string/tablelayout"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="247dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="92dp"
        android:layout_height="33dp"
        android:gravity="center"
        android:text="@string/text1"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="27dp" />
</android.support.constraint.ConstraintLayout>